--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dom.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/fac-15/CC_toDoList/issues"
   },
-  "homepage": "https://github.com/fac-15/CC_toDoList#readme"
+  "homepage": "https://github.com/fac-15/CC_toDoList#readme",
+  "devDependencies": {
+    "tape": "^4.9.1"
+  }
 }
