--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "CC_toDoList",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Notes and stuff - [IIFE - Immediately Invoked Function Expression](https://developer.mozilla.org/en-US/docs/Glossary/IIFE)",
   "main": "dom.js",
   "scripts": {
     "test": "tape ./test.js"
