--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Notes and stuff - [IIFE - Immediately Invoked Function Expression](https://developer.mozilla.org/en-US/docs/Glossary/IIFE)",
   "main": "dom.js",
   "scripts": {
-    "test": "tape ./test.js"
+    "test": "tape ./test.js | tap-spec"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/fac-15/CC_toDoList#readme",
   "devDependencies": {
+    "tap-spec": "^5.0.0",
     "tape": "^4.9.1"
   }
 }
